Terminado de traducir

--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@
           <p class="concept-title" id="title">Pyro Lancer from Liyue</p>
           <p class="concept-desc" id="description">
             Concept inspired on the game «Genshin Impact», she comes from the region 
-            named Liyue, inspired by chinese culture. This character posses
-            «Pyro vision», representing the hability of using fire on their attacks.
-            Pyro characters are passionate and very intense with theirambitions.
+            named Liyue inspired by chinese culture. This character posses
+            «Pyro vision» representing the hability of using fire on their attacks.
+            Pyro characters are passionate and very intense with their ambitions.
           </p>
         </div>
         <div class="concept-image">
@@ -317,10 +317,10 @@
           </div>
           <p class="game-title">Unreal</p>
           <p class="game-desc">
-            This proyect was developed on the last year of my career, as final proyect for the Videogames assignature,
+            This proyect was developed on the last year of my career as final proyect for my Videogames assignature,
             coded on C#  using Unity.<br />
-            The games consisted on representing the most "common" mental illness on the world, painting them
-            in form of beings that helped the protagonist through the game. We only developed one level,
+            The game consisted on representing the most "common" mental illness on the world, painting them
+            in form of beings that helped the protagonist through the game. We only developed one level
             because it was made in one week.
           </p>
         </div>
@@ -341,12 +341,13 @@
 
           <p class="game-title">POO Fights!</p>
           <p class="game-desc">
-            Este proyecto fue desarrollado en el tercer semestre de la carrera,
-            como proyecto final para la asignatura de Programacion Orientada a
-            Objetos, fue programado en Java, haciendo uso de Greenfoot. <br />
-            Relata la pequeña historia de un alumno que pierde su libreta el dia
-            del examen, recorre un mundo recogiendo poco a poco sus notas y al
-            final presenta su examen de POO.
+            This proyect was developed on the thrid semester of my career
+            as final proyect for the assignature Object Oriented Programming, coded
+            in Java using Greenfoot. <br />
+            Tells a short story of a student that lost her notebook the day of
+            her final test, she has to clear levels where she can get lost pages 
+            of her notebook, at the end of the game she presents her final test 
+            with the help of the lost pages.
           </p>
         </div>
       </div>
@@ -374,16 +375,17 @@
         </div>
         <div class="anim-details">
           <div class="anim-information">
-            <p class="anim-title" id="title2">Unreal: introducción</p>
+            <p class="anim-title" id="title2">Unreal: introduction</p>
             <p class="anim-desc" id="description2">
-              Esta animación pertenece al proyecto previamente mencionado
-              «Unreal» como escena introductoria al juego. Podemos observar al
-              protagonista escapando de "algo", al tenerlo cara a cara revela la
-              forma de este "algo", representada por un ser grande, musculoso y
-              con ciertas caracteristicas de una calaca. Logra ponerse de piel
-              de nuevo y se encierra en el primer lugar que encuentra, para asi
-              encontrarse con nuestro primer aliado que representa la
-              esquizofrenia.
+              This animation belongs to the proyect previously mentioned
+              «Unreal» as an introducting scene for the game. 
+              <br> <br>
+              We can observe the
+              protagonist scaping of "something", when he finally faces him reveals
+              the form of "that thing", represented by something big, strong and with 
+              some features that look like a skeleton. He scapes and hides on the first
+              place he founds but in that place he now faces our first alied that 
+              represents schizophrenia.
             </p>
           </div>
           <div class="anim-preview">
@@ -429,7 +431,7 @@
           <div class="model-gallery">
             <img
               id="gallery1"
-              alt="Palomitas: Modelo realizado en Blender."
+              alt="Popcorns: Sculped on Blender."
               onclick="expandImg('gallery1')"
               src="https://res.cloudinary.com/kimchidrwas/image/upload/v1635270764/Portfolio%20UI/Modelos%203D/Palomitas_dnu7zd.png"
             />
@@ -437,7 +439,7 @@
           <div class="model-gallery">
             <img
               id="gallery2"
-              alt="Refrigerador de refresco: Modelo realizado en Blender."
+              alt="Soda cooler: Sculped on Blender."
               onclick="expandImg('gallery2')"
               src="https://res.cloudinary.com/kimchidrwas/image/upload/v1635270764/Portfolio%20UI/Modelos%203D/Refri_con_refrescos_vnuw8f.png"
             />
@@ -445,7 +447,7 @@
           <div class="model-gallery">
             <img
               id="gallery3"
-              alt="Nachos con queso: Modelo realizado en Blender."
+              alt="Nachos with cheese: Sculped on Blender."
               onclick="expandImg('gallery3')"
               src="https://res.cloudinary.com/kimchidrwas/image/upload/v1635270777/Portfolio%20UI/Modelos%203D/nachos_kznmoz.png"
             />
@@ -455,7 +457,7 @@
           <div class="model-gallery2">
             <img
               id="gallery4"
-              alt="Vaso de refresco: Modelo realizado en Blender."
+              alt="Soda: Sculped on Blender."
               onclick="expandImg('gallery4')"
               src="https://res.cloudinary.com/kimchidrwas/image/upload/v1635270763/Portfolio%20UI/Modelos%203D/vaso_gmy0tm.png"
             />
@@ -463,7 +465,7 @@
           <div class="model-gallery2">
             <img
               id="gallery5"
-              alt="Cara leonore: Modelo realizado en Sculptris y Blender."
+              alt="Leonore's face: Sculped on Blender and Sculptris."
               onclick="expandImg('gallery5')"
               src="https://res.cloudinary.com/kimchidrwas/image/upload/v1640723075/Portfolio%20UI/Modelos%203D/objeto_hr8ohi.png"
             />
